--- a/aa09-battleship-dom-temp/assets/css/index.css
+++ b/aa09-battleship-dom-temp/assets/css/index.css
@@ -1,5 +1,6 @@
 /* Your code here */
-h1 {
+h1,
+h4 {
 	display: flex;
 	justify-content: center;
 }
@@ -14,4 +15,13 @@ h1 {
 	border: 1px solid black;
 	height: 50px;
 	width: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
 }
